--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Gameboy';
-    src: url(assets/fonts/Gameboy.ttf);
+    src: url(./assets/fonts/GameBoy.ttf);
 }
 
 
