--- a/style.css
+++ b/style.css
@@ -45,14 +45,6 @@ div.Fixed{
     background-color: var(--gbGreen1);
 }
 
-div.Navbar{
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-
-    background-color: var(--gbGreen2);
-}
-
 div.Content{
     display: block;
     position: absolute;
@@ -61,7 +53,7 @@ div.Content{
 
     left: 0vw;
     right: 0vw;
-    top: 20vh;
+    top: 25vh;
     bottom: 0vh;
 }
 
@@ -96,6 +88,27 @@ img.FullWidth{
 
 /*Mobile*/
 @media (max-width: 800px) {
+
+    #MenuButton{    
+        display: block; 
+        background-color: var(--gbGreen3);
+        text-align: center;
+        width: 10vw;
+        height: 2.5vh;
+    }
+
+    div.Navbar{
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        flex-direction: column;
+    
+        background-color: var(--gbGreen2);
+        width: 50%;
+
+        visibility: hidden;
+    }
+
     div.Popup{
         position: fixed;
         left: 0vw;
@@ -135,11 +148,31 @@ img.FullWidth{
         float: left;
         width: 50vw;
     }
+
+    .MobileHide{
+        visibility: visible;
+    }
+
 }
 
 
 /*Desktop*/
 @media (min-width: 800px){
+
+    #MenuButton{
+        visibility: hidden;   
+    }
+
+    div.Navbar{
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+    
+        background-color: var(--gbGreen2);
+
+        visibility: visible;
+    }
+
     div.Popup{
         position: fixed;
         left: 0vw;
@@ -173,6 +206,10 @@ img.FullWidth{
     img.ImageAndDescription{
         width: 100%;
         height: auto;
+    }
+
+    .MobileHide{
+        visibility: visible;
     }
 
 }
